[package]

name = "nomplusplus"
version = "0.1.0"
authors = [ "joel@dislocal.com", "contact@geoffroycouprie.com" ]
description = "A byte-oriented, zero-copy, parser combinators library"
license = "MIT"
repository = "https://github.com/joelself/nomplusplus"
readme = "README.md"
documentation = "http://rust.unhandledexpression.com/nom/"
keywords = ["parser", "parser-combinators", "parsing", "streaming", "bit"]

include = [
  "CHANGELOG.md",
  "LICENSE",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "src/*.rs",
  "tests/*.rs"
]

[features]
core = []
nightly = []
default = ["stream"]
regexp = ["regex"]
regexp_macros = ["regexp", "lazy_static"]
stream = []

[dependencies.regex]
version = "^0.1.41"
optional = true

[dependencies.lazy_static]
version = "^0.1.15"
optional = true

